--- a/iOSClient/Brand/Share.plist
+++ b/iOSClient/Brand/Share.plist
@@ -31,8 +31,12 @@
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
+			<key>NSExtensionActivationUsesStrictMatching</key>
+			<integer>1</integer>
 			<key>NSExtensionActivationRule</key>
 			<dict>
+				<key>NSExtensionActivationDictionaryVersion</key>
+				<integer>2</integer>
 				<key>NSExtensionActivationSupportsAttachmentsWithMaxCount</key>
 				<integer>20</integer>
 				<key>NSExtensionActivationSupportsFileWithMaxCount</key>
@@ -44,7 +48,7 @@
 				<key>NSExtensionActivationSupportsText</key>
 				<true/>
 				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
-				<integer>0</integer>
+				<integer>20</integer>
 			</dict>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
